<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Files.EntrepriseActivity">

    <TextView
        android:id="@+id/txtti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vue_de_l_entreprise"
        android:gravity="center"
        android:padding="10dp"
        android:textSize="25sp"/>

    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_below="@id/txtti"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardc1"
        android:layout_below="@id/map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <!-- Title, secondary and supporting text -->
            <TextView
                android:id="@+id/tvDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_margin="10dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardc2"
        android:layout_below="@id/cardc1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <!-- Title, secondary and supporting text -->
            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_margin="10dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardc3"
        android:layout_below="@id/cardc2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <!-- Title, secondary and supporting text -->
            <TextView
                android:id="@+id/tvAdresse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/adresse"
                android:layout_margin="10dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/lnr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardc3"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardc4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:id="@+id/tvCodePostal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/cp"
                    android:layout_margin="10dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</RelativeLayout>